[gd_scene load_steps=9 format=3 uid="uid://d1v3rvuka8dmn"]

[ext_resource type="Texture2D" uid="uid://cwydckjak8w1f" path="res://images/challenges/EC1.png" id="1_1j2kp"]
[ext_resource type="Script" path="res://UI/challenges/eternity.gd" id="1_ow2ja"]
[ext_resource type="Texture2D" uid="uid://bwavs07as2v2" path="res://images/challenges/EC2.png" id="3_1f1oy"]
[ext_resource type="Texture2D" uid="uid://ky4p621e6ee2" path="res://images/challenges/EC3.png" id="4_vrk2f"]
[ext_resource type="Texture2D" uid="uid://ifgbp5d6gavr" path="res://images/challenges/EC4.png" id="5_ukq3o"]
[ext_resource type="Texture2D" uid="uid://cn7q1ilbg72ug" path="res://images/challenges/EC5.png" id="6_26ynn"]
[ext_resource type="Texture2D" uid="uid://d4c3ww4hva082" path="res://images/challenges/EC6.png" id="7_ud5jq"]
[ext_resource type="Texture2D" uid="uid://boq7coywiq4e5" path="res://images/challenges/EC7.png" id="8_qj3fm"]

[node name="etern" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ow2ja")

[node name="CurrentChallenge" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -177.0
offset_right = 178.0
offset_bottom = 30.0
grow_horizontal = 2
collapsed = true
dragger_visibility = 2

[node name="Label" type="Label" parent="CurrentChallenge"]
layout_mode = 2
size_flags_horizontal = 3
text = "You aren't in any challenge."
horizontal_alignment = 1

[node name="Exit" type="Button" parent="CurrentChallenge"]
visible = false
custom_minimum_size = Vector2(110, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "Exit challenge"

[node name="Meow" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 33.0
offset_right = 20.0
offset_bottom = 55.0
grow_horizontal = 2
text = "You have seen 3 out of ?? Eternity Challenges.
The next EC is unlocked at 1e99999 total Tachyons."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Chal" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 61.0
grow_horizontal = 2
grow_vertical = 2

[node name="lenges" type="HFlowContainer" parent="Chal"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/v_separation = 25
alignment = 1

[node name="Separator" type="Control" parent="Chal/lenges"]
custom_minimum_size = Vector2(960, 0)
layout_mode = 2

[node name="EC1" type="Panel" parent="Chal/lenges"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_type_variation = &"EternPanel"

[node name="Name" type="Label" parent="Chal/lenges/EC1"]
layout_mode = 0
offset_top = -25.0
offset_right = 36.0
theme_override_font_sizes/font_size = 20
text = "EC1"
vertical_alignment = 2

[node name="Condition" type="RichTextLabel" parent="Chal/lenges/EC1"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -133.0
offset_bottom = 118.0
grow_horizontal = 2
text = "Challenges 1, 2, 5, 6, 11 and 14's restrictions all apply at once."

[node name="Start" type="Button" parent="Chal/lenges/EC1"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -48.0
offset_right = 132.0
offset_bottom = -13.0
grow_vertical = 0
text = "Start challenge"

[node name="ReqRew" type="RichTextLabel" parent="Chal/lenges/EC1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -65.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "[center]Requirement: 3.23e616 TC

Reward: ×3 on all TDs for each EC completion.
(Currently: ×1)"

[node name="TextureRect" type="TextureRect" parent="Chal/lenges/EC1"]
layout_mode = 0
offset_left = 169.0
offset_top = 3.0
offset_right = 297.0
offset_bottom = 131.0
texture = ExtResource("1_1j2kp")

[node name="EC2" type="Panel" parent="Chal/lenges"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_type_variation = &"EternPanel"

[node name="Name" type="Label" parent="Chal/lenges/EC2"]
layout_mode = 0
offset_top = -25.0
offset_right = 36.0
theme_override_font_sizes/font_size = 20
text = "EC2"
vertical_alignment = 2

[node name="Condition" type="RichTextLabel" parent="Chal/lenges/EC2"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -133.0
offset_bottom = 118.0
grow_horizontal = 2
text = "Eternity Dimensions' multipliers are raised ^0.20"

[node name="Start" type="Button" parent="Chal/lenges/EC2"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -48.0
offset_right = 132.0
offset_bottom = -13.0
grow_vertical = 0
text = "Start challenge"

[node name="ReqRew" type="RichTextLabel" parent="Chal/lenges/EC2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -65.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "[center]Requirement: 1.00e1500 TC

Reward: Timespeed affects Eternity Dimensions with greatly reduced effeect."

[node name="TextureRect" type="TextureRect" parent="Chal/lenges/EC2"]
layout_mode = 0
offset_left = 169.0
offset_top = 3.0
offset_right = 297.0
offset_bottom = 131.0
texture = ExtResource("3_1f1oy")

[node name="EC3" type="Panel" parent="Chal/lenges"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_type_variation = &"EternPanel"

[node name="Name" type="Label" parent="Chal/lenges/EC3"]
layout_mode = 0
offset_top = -25.0
offset_right = 36.0
theme_override_font_sizes/font_size = 20
text = "EC3"
vertical_alignment = 2

[node name="Condition" type="RichTextLabel" parent="Chal/lenges/EC3"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -133.0
offset_bottom = 118.0
grow_horizontal = 2
text = "All Tachyon Dimensions except the latest purchased are raised ^0.2."

[node name="Start" type="Button" parent="Chal/lenges/EC3"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -48.0
offset_right = 132.0
offset_bottom = -13.0
grow_vertical = 0
text = "Start challenge"

[node name="ReqRew" type="RichTextLabel" parent="Chal/lenges/EC3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -65.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "[center]Requirement: 1.00e1500 TC

Reward: Timespeed affects Eternity Dimensions with greatly reduced effeect."

[node name="TextureRect" type="TextureRect" parent="Chal/lenges/EC3"]
layout_mode = 0
offset_left = 169.0
offset_top = 3.0
offset_right = 297.0
offset_bottom = 131.0
texture = ExtResource("4_vrk2f")

[node name="EC4" type="Panel" parent="Chal/lenges"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_type_variation = &"EternPanel"

[node name="Name" type="Label" parent="Chal/lenges/EC4"]
layout_mode = 0
offset_top = -25.0
offset_right = 36.0
theme_override_font_sizes/font_size = 20
text = "EC4"
vertical_alignment = 2

[node name="Condition" type="RichTextLabel" parent="Chal/lenges/EC4"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -133.0
offset_bottom = 118.0
grow_horizontal = 2
text = "Tachyon Galaxies are more expensive the more Dilation you have and vice versa."

[node name="Start" type="Button" parent="Chal/lenges/EC4"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -48.0
offset_right = 132.0
offset_bottom = -13.0
grow_vertical = 0
text = "Start challenge"

[node name="ReqRew" type="RichTextLabel" parent="Chal/lenges/EC4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -65.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "[center]Requirement: 1.00e11500 TC

Reward: Galaxies are 15% stronger and Dilation is 5 dimensions cheaper."

[node name="TextureRect" type="TextureRect" parent="Chal/lenges/EC4"]
layout_mode = 0
offset_left = 169.0
offset_top = 3.0
offset_right = 297.0
offset_bottom = 131.0
texture = ExtResource("5_ukq3o")

[node name="EC5" type="Panel" parent="Chal/lenges"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_type_variation = &"EternPanel"

[node name="Name" type="Label" parent="Chal/lenges/EC5"]
layout_mode = 0
offset_top = -25.0
offset_right = 36.0
theme_override_font_sizes/font_size = 20
text = "EC5"
vertical_alignment = 2

[node name="Condition" type="RichTextLabel" parent="Chal/lenges/EC5"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -133.0
offset_bottom = 118.0
grow_horizontal = 2
text = "You cannot buy Timespeed Upgrades, but Eternity Dimensions are raised ^1.1."

[node name="Start" type="Button" parent="Chal/lenges/EC5"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -48.0
offset_right = 132.0
offset_bottom = -13.0
grow_vertical = 0
text = "Start challenge"

[node name="ReqRew" type="RichTextLabel" parent="Chal/lenges/EC5"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -65.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "[center]Requirement: ??? TC

Reward: ???"

[node name="TextureRect" type="TextureRect" parent="Chal/lenges/EC5"]
layout_mode = 0
offset_left = 169.0
offset_top = 3.0
offset_right = 297.0
offset_bottom = 131.0
texture = ExtResource("6_26ynn")

[node name="EC6" type="Panel" parent="Chal/lenges"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_type_variation = &"EternPanel"

[node name="Name" type="Label" parent="Chal/lenges/EC6"]
layout_mode = 0
offset_top = -25.0
offset_right = 36.0
theme_override_font_sizes/font_size = 20
text = "EC6"
vertical_alignment = 2

[node name="Condition" type="RichTextLabel" parent="Chal/lenges/EC6"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -133.0
offset_bottom = 118.0
grow_horizontal = 2
text = "The threshold for free Timespeed Upgrades rises more than exponentially."

[node name="Start" type="Button" parent="Chal/lenges/EC6"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -48.0
offset_right = 132.0
offset_bottom = -13.0
grow_vertical = 0
text = "Start challenge"

[node name="ReqRew" type="RichTextLabel" parent="Chal/lenges/EC6"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -65.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "[center]Requirement: ??? TC

Reward: ???"

[node name="TextureRect" type="TextureRect" parent="Chal/lenges/EC6"]
layout_mode = 0
offset_left = 169.0
offset_top = 3.0
offset_right = 297.0
offset_bottom = 131.0
texture = ExtResource("7_ud5jq")

[node name="EC7" type="Panel" parent="Chal/lenges"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_type_variation = &"EternPanel"

[node name="Name" type="Label" parent="Chal/lenges/EC7"]
layout_mode = 0
offset_top = -25.0
offset_right = 36.0
theme_override_font_sizes/font_size = 20
text = "EC7"
vertical_alignment = 2

[node name="Condition" type="RichTextLabel" parent="Chal/lenges/EC7"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -133.0
offset_bottom = 118.0
grow_horizontal = 2
text = "Tachyon Galaxies are disabled, but Time Dilation's multiplier is ×10.00."

[node name="Start" type="Button" parent="Chal/lenges/EC7"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -48.0
offset_right = 132.0
offset_bottom = -13.0
grow_vertical = 0
text = "Start challenge"

[node name="ReqRew" type="RichTextLabel" parent="Chal/lenges/EC7"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -65.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "[center]Requirement: ??? TC

Reward: ???"

[node name="TextureRect" type="TextureRect" parent="Chal/lenges/EC7"]
layout_mode = 0
offset_left = 169.0
offset_top = 3.0
offset_right = 297.0
offset_bottom = 131.0
texture = ExtResource("8_qj3fm")

[connection signal="pressed" from="CurrentChallenge/Exit" to="." method="challenge_start" binds= [0]]
[connection signal="pressed" from="Chal/lenges/EC1/Start" to="." method="challenge_start" binds= [16]]
[connection signal="pressed" from="Chal/lenges/EC2/Start" to="." method="challenge_start" binds= [17]]
[connection signal="pressed" from="Chal/lenges/EC3/Start" to="." method="challenge_start" binds= [18]]
[connection signal="pressed" from="Chal/lenges/EC4/Start" to="." method="challenge_start" binds= [19]]
[connection signal="pressed" from="Chal/lenges/EC5/Start" to="." method="challenge_start" binds= [20]]
[connection signal="pressed" from="Chal/lenges/EC6/Start" to="." method="challenge_start" binds= [21]]
[connection signal="pressed" from="Chal/lenges/EC7/Start" to="." method="challenge_start" binds= [22]]
